--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,7 @@
-astroid==2.2.5
 dj-database-url==0.5.0
-Django==2.2.20
+Django~=2.2.20
 django-heroku==0.3.1
-djangorestframework==3.11.2
-gunicorn==19.9.0
-isort==4.3.21
-lazy-object-proxy==1.4.2
-mccabe==0.6.1
-psycopg2==2.8.3
-pylint==2.3.1
-pytz==2019.2
-six==1.12.0
-sqlparse==0.3.0
-typed-ast==1.4.0
-whitenoise==4.1.3
-wrapt==1.11.2
+djangorestframework~=3.12.4
+gunicorn~=20.1.0
+psycopg2~=2.9.1
+pylint~=2.8.3
